--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,13 @@
 			<param-name>com.sun.jersey.config.property.packages</param-name>
 			<param-value>com.sanchezih.rest.demo</param-value>
 		</init-param>
+		
+		<!-- <init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param> -->
+		
+		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
