--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,15 +9,13 @@
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>com.sanchezih.rest.demo</param-value>
+			<param-value>com.sanchezih.rest.resources</param-value>
 		</init-param>
-		
-		<!-- <init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
-		</init-param> -->
-		
-		
+
+		<!-- <init-param> <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name> 
+			<param-value>true</param-value> </init-param> -->
+
+
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
